fix: Fixed gears graphic spacing in premium-flows page, updated premium getting started links in premium and premium-flows pages

--- a/static/adblock/premium/style.css
+++ b/static/adblock/premium/style.css
@@ -86,10 +86,10 @@ main #hero {
     max-width: 288px;
     position: relative;
 }
-button.get-started-with-myadblock {
+.get-started-with-myadblock {
     width: 384px;
     height: 48px;
-    background: #0075ff;
+    background-color: #0797E1;
     border-radius: 6px;
     font-weight: 700;
     font-size: 16px;
@@ -97,10 +97,11 @@ button.get-started-with-myadblock {
     display: flex;
     align-items: center;
     text-align: center;
-    color: #ffffff;
+    justify-content: center;
+    color: #ffffff !important;
     margin-bottom: 264px;
 }
-button.get-started-with-myadblock:hover {
+.get-started-with-myadblock:hover {
     cursor: pointer;
     box-shadow: 0px 10px 20px rgb(51 51 51 / 20%);
 }
@@ -284,7 +285,7 @@ ul.feature-row li span {
     flex-flow: column;
     justify-content: space-evenly;
 }
-button.submit-cta.full-width {
+.submit-cta.full-width {
     width: 100%;
 }
 #already-donated-activity {
@@ -301,7 +302,7 @@ button.submit-cta.full-width {
     width: 100%;
     margin: 16px 0px;
 }
-button.submit-cta {
+.submit-cta {
     display: flex;
     flex-direction: row;
     justify-content: center;
